xine-lib (1.1.11) unreleased
  * Fix a RealPlayer codec detection bug.

xine-lib (1.1.10) 2008-01-26
  * Security fixes:
    - Buffer overflow which allows a remote attacker to execute arbitrary
      code or crash the client program via a crafted ASF header. 
      (Related to CVE-2006-1664)
  * Update Ogg and Annodex mimetypes and extensions.
  * Change the default v4l device paths to /dev/video0 and /dev/radio0.
  * Fix support for subtitles with schemes (e.g. http://), partly broken
    since 1.1.8.
  * Unescape the filename in "#save:". This allows filenames to contain ';'
    etc. without ambiguity, e.g. "#save:foo%3B1.ts" -> "foo;1.ts", but front
    end authors should be careful with xine-lib older than 1.1.10.
  * Backported xine-config & libxine.pc from 1.2.
    Consequently, xine-config now requires pkg-config.
  * Don't discard audio samples forever. Fixed streaming playback.
  * Fix a possible crash on channel change in the DVB plugin.
  * Flash video demuxer improvements and bug fixes.
  * Make the V4L ALSA audio input device configurable. (This needs more work.)

xine-lib (1.1.9.1) 2008-01-11
  * Security fixes:
    - Buffer overflow which allows a remote attacker to execute arbitrary
      code via a crafted SDP Abstract attribute.
      (CVE-2008-0225, a.k.a. CVE-2008-0238)
      (Fix ported from mplayer changeset 22821)
  * Fix a read-past-end bug in xine-lib's internal strtok_r replacement.
    (Only affects systems without strtok_r.) [Bug #19]
  * Fix a bug which causes video playback display errors on PPC/Darwin.

xine-lib (1.1.9) 2008-01-06
  * Fix dvd://.../title[.chapter] handling (somewhat broken in 1.1.8).
  * Fix switching DVB subtitles channels.
  * DVB sub: switch to dyn mem alloc and allow multiple CLUTs per page.
  * Check if DVB sub PTS is reliable and show sub immediately if it's not.
  * Fix incorrect H.264 detection on successive MPEG1/2 B frames.
  * Add UI option to configure FFmpeg's video decoder thread count.