@@ -1,5 +1,11 @@
 xine-lib (1.1.11) unreleased
   * Fix a RealPlayer codec detection bug.
+  * Reworked the plugin directory naming so that external plugins don't have
+    to be rebuilt for every release. We now use a naming scheme based on the
+    API/ABI versioning, checking older directories - with this release, the
+    plugin directory name is 1.19, and if this gets bumped to 1.20 in a
+    future release, 1.19 will still be available for external plugins.
+    (Any directories not 1.* won't be looked in.)
 
 xine-lib (1.1.10) 2008-01-26
   * Security fixes:
